fixed errors + getImage not working in frontend
